# evaluator

./: README.md
gps_msg/: CMakeLists.txt  package.xml
gps_msg/msg/: GlobalPositionInt.msg
localiztion_evaluator/: CMakeLists.txt  package.xml
localiztion_evaluator/src/: position_comparator.cpp
